packages/ses/test/error/_lockdown-with-extra-intrinsics.js
import './_prepare-with-extra-intrinsics.js';

lockdown();
